# opengl-template

./: .clang-format  .clangd  CMakeLists.txt  README.md  mise.toml
src/: main.cpp
